--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -9,21 +9,21 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 #log4j.logger.org.hibernate=error
-log4j.logger.org.hibernate=debug
+log4j.logger.org.hibernate=error
 #org.hibernate.pretty
 
 ### log HQL query parser activity
 log4j.logger.org.hibernate.hql.ast.AST=error
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=error
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=debug
+log4j.logger.org.hibernate.type=error
 #log4j.logger.org.hibernate.type=error
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=debug
+log4j.logger.org.hibernate.tool.hbm2ddl=error
 
 ### log HQL parse trees
 log4j.logger.org.hibernate.hql=error
