--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -10,31 +10,31 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: hudson_test.properties,v 1.3 2010/03/02 23:30:31 mtaal Exp $
+# $Id: hudson_test.properties,v 1.4 2010/04/03 12:55:19 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either SINGLE_TABLE or JOINED 
 # <cfgname>.optimistic= optimistic setting, either true or false
 
-#mysql_s_o.dbadapter=mysql
-#mysql_s_o.mapstrategy=JOINED
-#mysql_s_o.optimistic=true
+mysql_s_o.dbadapter=mysql
+mysql_s_o.mapstrategy=JOINED
+mysql_s_o.optimistic=true
 
 #mysql_e_o.ejb3=true
 #mysql_e_o.dbadapter=mysql
 #mysql_e_o.mapstrategy=JOINED
 #mysql_e_o.optimistic=true
 
-hsqldb_h_o.dbadapter=hsqldbmem
-hsqldb_h_o.mapstrategy=SINGLE_TABLE
-hsqldb_h_o.optimistic=true
+#hsqldb_h_o.dbadapter=hsqldbmem
+#hsqldb_h_o.mapstrategy=SINGLE_TABLE
+#hsqldb_h_o.optimistic=true
 
-hsqldb_e_o.ejb3=true
-hsqldb_e_o.dbadapter=hsqldbmem
-hsqldb_e_o.mapstrategy=SINGLE_TABLE
-hsqldb_e_o.mapstrategy=JOINED
-hsqldb_e_o.optimistic=true
+#hsqldb_e_o.ejb3=true
+#hsqldb_e_o.dbadapter=hsqldbmem
+#hsqldb_e_o.mapstrategy=SINGLE_TABLE
+#hsqldb_e_o.mapstrategy=JOINED
+#hsqldb_e_o.optimistic=true
 
 #pgsql_a_o.dbadapter=pgsql
 #pgsql_a_o.mapstrategy=SINGLE_TABLE
