--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -16,10 +16,10 @@ log4j.logger.org.hibernate=error
 log4j.logger.org.hibernate.hql.ast.AST=error
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=error
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=debug
+log4j.logger.org.hibernate.type=error
 #log4j.logger.org.hibernate.type=error
 
 ### log schema export/update ###
