--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -10,16 +10,16 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: hudson_test.properties,v 1.6 2010/04/23 08:52:54 mtaal Exp $
+# $Id: hudson_test.properties,v 1.7 2010/04/23 09:19:02 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either SINGLE_TABLE or JOINED 
 # <cfgname>.optimistic= optimistic setting, either true or false
 
-mysql_s_o.dbadapter=mysql
-mysql_s_o.mapstrategy=JOINED
-mysql_s_o.optimistic=true
+#mysql_s_o.dbadapter=mysql
+#mysql_s_o.mapstrategy=JOINED
+#mysql_s_o.optimistic=true
 
 #mysql_e_o.ejb3=true
 #mysql_e_o.dbadapter=mysql
