--- a/features/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
@@ -16,7 +16,7 @@ featureName=EMF Teneo EclipseLink Runtime
 providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Updates
+updateSiteName=Eclipse Modeling Project Updates
 
 # "description" property - description of the feature
 description=Teneo EclipseLink contains the EMF EclipseLink integration runtime plugins.
