Updated update site links

--- a/features/org.eclipse.emf.teneo.eclipselink.sdk-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.eclipselink.sdk-feature/feature.properties
@@ -16,7 +16,7 @@ featureName=EMF Teneo EclipseLink SDK
 providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Updates
+updateSiteName=Eclipse Modeling Project Updates
 
 # "description" property - description of the feature
 description=Teneo EclipseLink provides the EMF EclipseLink integration.
