--- a/features/org.eclipse.emf.teneo.hibernate-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.hibernate-feature/feature.properties
@@ -16,7 +16,7 @@ featureName=EMF Teneo Hibernate Runtime
 providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Updates
+updateSiteName=Eclipse Modeling Project Updates
 
 # "description" property - description of the feature
 description=Teneo Hibernate provides the EMF Hibernate integration.
