Updated feature.xml and feature.properties

--- a/features/org.eclipse.emf.teneo.site-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.site-feature/feature.properties
@@ -161,8 +161,7 @@ re-export of encryption software, to see if this is permitted.\n\
 Java and all Java-based trademarks are trademarks of Oracle Corporation in the United States, other countries, or both.\n
 ########### end of license property ##########################################
 # Label for the update site (on download1.eclipse.org)
-emfUpdateSiteName=Eclipse Modeling Framework (EMF) Updates
-emftUpdateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
+updateSiteName=Eclipse Modeling Project Updates
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
