Updated feature.xml and feature.properties

--- a/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
@@ -16,7 +16,7 @@ featureName=Teneo All-In-One Feature (Hibernate and EclipseLink)
 providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Updates
+updateSiteName=Eclipse Modeling Project Updates
 
 # "description" property - description of the feature
 description=Teneo All-In-One Feature includes runtime, source code and code examples
