--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -2,13 +2,20 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.10 2009/08/21 10:16:53 mtaal Exp $
+# $Id: build.properties,v 1.11 2010/06/14 06:49:45 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
