--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
@@ -2,13 +2,20 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.8 2009/09/13 14:45:39 mtaal Exp $
+# $Id: build.properties,v 1.9 2010/06/14 06:49:46 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png
 jars.compile.order = .
 source.. = src/
 output.. = bin/
