--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.11 2010/06/14 06:49:45 mtaal Exp $
+# $Id: build.properties,v 1.12 2010/06/15 14:39:13 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -19,3 +19,12 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties,\
+               plugin.xml
