--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -10,21 +10,21 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: hudson_test.properties,v 1.8 2010/08/19 08:24:52 mtaal Exp $
+# $Id: hudson_test.properties,v 1.9 2010/08/19 08:25:34 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either SINGLE_TABLE or JOINED 
 # <cfgname>.optimistic= optimistic setting, either true or false
 
-mysql_s_o.dbadapter=mysql
-mysql_s_o.mapstrategy=JOINED
-mysql_s_o.optimistic=true
+#mysql_s_o.dbadapter=mysql
+#mysql_s_o.mapstrategy=JOINED
+#mysql_s_o.optimistic=true
 
-mysql_e_o.ejb3=true
-mysql_e_o.dbadapter=mysql
-mysql_e_o.mapstrategy=JOINED
-mysql_e_o.optimistic=true
+#mysql_e_o.ejb3=true
+#mysql_e_o.dbadapter=mysql
+#mysql_e_o.mapstrategy=JOINED
+#mysql_e_o.optimistic=true
 
 hsqldb_h_o.dbadapter=hsqldbmem
 hsqldb_h_o.mapstrategy=SINGLE_TABLE
