REmoved occurences of the hibernate name

--- a/features/org.eclipse.emf.teneo.cdo.sdk-feature/about.properties
+++ b/features/org.eclipse.emf.teneo.cdo.sdk-feature/about.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.1 2010/11/14 03:02:49 mtaal Exp $
+# * $Id: about.properties,v 1.2 2010/11/14 05:15:42 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,15 +30,9 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-featureName=EMF Teneo Hibernate SDK
+featureName=EMF Teneo CDO SDK
 
-featureText=EMF Teneo Hibernate SDK \n\
-Version: {featureVersion}\n\
-Build id: {0}\n\
-\n\
-(c) Copyright Springsite BV (The Netherlands) and others, 2010.  All rights reserved.\n\
-\n\
-Visit http://www.eclipse.org/emf
+featureText=EMF Teneo CDO SDK \nVersion\: {featureVersion}\nBuild id\: {0}\n\n(c) Copyright Springsite BV (The Netherlands) and others, 2010.  All rights reserved.\n\nVisit http\://www.eclipse.org/emf
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
