--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.12 2010/06/15 14:39:13 mtaal Exp $
+# $Id: build.properties,v 1.13 2011/01/06 12:47:37 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -25,6 +25,4 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties,\
-               plugin.xml
+               modeling32.png
