Removed example.org as provider name

--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.11 2009/06/11 04:59:35 mtaal Exp $
+# * $Id: plugin.properties,v 1.12 2011/02/21 04:50:16 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -32,4 +32,4 @@ Plugin.providerName = Eclipse Modeling Project
 # The above properties have been shipped for translation.
 # ==============================================================================
 pluginName = Pannotation Model
-providerName = www.example.org
+providerName = Eclipse Modeling Project
