Made ecoremodelelement type parameterizable

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: hudson_test.properties,v 1.10 2010/10/31 21:50:21 mtaal Exp $
+# $Id: hudson_test.properties,v 1.11 2011/02/27 20:10:39 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
@@ -30,10 +30,10 @@ hsqldb_h_o.dbadapter=hsqldbmem
 hsqldb_h_o.mapstrategy=SINGLE_TABLE
 hsqldb_h_o.optimistic=true
 
-hsqldb_e_o.ejb3=true
-hsqldb_e_o.dbadapter=hsqldbmem
-hsqldb_e_o.mapstrategy=JOINED
-hsqldb_e_o.optimistic=true
+#hsqldb_e_o.ejb3=true
+#hsqldb_e_o.dbadapter=hsqldbmem
+#hsqldb_e_o.mapstrategy=JOINED
+#hsqldb_e_o.optimistic=true
 
 #pgsql_a_o.dbadapter=pgsql
 #pgsql_a_o.mapstrategy=SINGLE_TABLE
