Added xml tests to test suite

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: hudson_test.properties,v 1.12 2011/03/17 10:22:30 mtaal Exp $
+# $Id: hudson_test.properties,v 1.13 2011/04/08 14:12:50 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
@@ -25,6 +25,11 @@
 #mysql_e_o.dbadapter=mysql
 #mysql_e_o.mapstrategy=JOINED
 #mysql_e_o.optimistic=true
+
+hsqldb_x_o.dbadapter=hsqldbmem
+hsqldb_x_o.mapstrategy=SINGLE_TABLE
+hsqldb_x_o.optimistic=true
+hsqldb_x_o.xml=true
 
 hsqldb_h_o.dbadapter=hsqldbmem
 hsqldb_h_o.mapstrategy=SINGLE_TABLE
