--- a/hibernate/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
+++ b/hibernate/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Hbannotation Model
+providerName = www.example.org
