Fix bug that secondary table names where not maintained if manually specified

--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -16,7 +16,7 @@ log4j.logger.org.hibernate=error
 log4j.logger.org.hibernate.hql.ast.AST=error
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=error
+log4j.logger.org.hibernate.SQL=debug
 log4j.logger.org.hibernate.engine.query=error
 
 ### log JDBC bind parameters ###
