Working on support for hb 4.2.7SP1

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
@@ -26,8 +26,8 @@
 # Note that the database name is not specified because this is set automatically
 
 mysql.dburl=jdbc:mysql://127.0.0.1:3306/
-mysql.dbuser=teneo
-mysql.dbpassword=teneo1
+mysql.dbuser=root
+mysql.dbpassword=root
 mysql.dbdriver=com.mysql.jdbc.Driver
 mysql.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateMysqlDBAdapter
 
