Upgrading to HB 4.3.7, solve wrong index issue on EMAP as list extra lazy

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
@@ -27,7 +27,7 @@
 
 mysql.dburl=jdbc:mysql://127.0.0.1:3306/
 mysql.dbuser=root
-mysql.dbpassword=root
+mysql.dbpassword=
 mysql.dbdriver=com.mysql.jdbc.Driver
 mysql.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateMysqlDBAdapter
 
