Support foreign key composite ids

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/hudson_test.properties
@@ -40,13 +40,13 @@ hsqldb_e_o.dbadapter=hsqldbmem
 hsqldb_e_o.mapstrategy=JOINED
 hsqldb_e_o.optimistic=true
 
-#pgsql_a_o.dbadapter=pgsql
-#pgsql_a_o.mapstrategy=SINGLE_TABLE
-#pgsql_a_o.optimistic=true
+pgsql_a_o.dbadapter=pgsql
+pgsql_a_o.mapstrategy=SINGLE_TABLE
+pgsql_a_o.optimistic=true
 
-#pgsql_s_o.dbadapter=pgsql
-#pgsql_s_o.mapstrategy=JOINED
-#pgsql_s_o.optimistic=true
+pgsql_s_o.dbadapter=pgsql
+pgsql_s_o.mapstrategy=JOINED
+pgsql_s_o.optimistic=true
 
 #mssql_a_o.dbadapter=mcssql
 #mssql_a_o.mapstrategy=SINGLE_TABLE
